# AlgoTrading

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.dev.yml  docker-compose.yml  prd.md
backend/: Dockerfile  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: README  env.py
backend/alembic/versions/: 001_initial_schema.py  002_add_backtest_tables.py  003_add_subscription_config.py  004_add_optimization_tables.py  005_add_blog_tables.py  006_add_payment_tables.py  1d197469eec1_add_dry_run_to_subscriptions_and_create_.py
backend/app/: __init__.py  main.py
backend/app/api/: deps.py
backend/app/api/v1/: auth.py  backtest.py  blog.py  broker.py  market.py  notifications.py  optimization.py  order_logs.py  payments.py  portfolio.py  reports.py  router.py  strategies.py  users.py
backend/app/api/v1/admin/: blog.py  monitoring.py  strategies.py  users.py
backend/app/api/websocket/: __init__.py  manager.py  market_data.py  portfolio.py
backend/app/core/: __init__.py  config.py  database.py  execution.py  security.py
backend/app/models/: __init__.py  backtest.py  blog.py  notification.py  optimization.py  order.py  strategy.py  subscription.py  trade.py  user.py
backend/app/schemas/: __init__.py  backtest.py  blog.py  market.py  optimization.py  order.py  payment.py  strategy.py  user.py
backend/app/services/: indicators.py  notification_service.py  payment_service.py  report_service.py
backend/backtest/: __init__.py  engine.py  metrics.py  optimizer.py  simulator.py
backend/brokers/: __init__.py  base.py  factory.py  fyers.py  paper.py  registry.py
backend/brokers/plugins/: __init__.py
backend/brokers/plugins/fyers/: __init__.py  broker.py  plugin.json
backend/execution_engine/: __init__.py  engine.py  kill_switch.py  risk_manager.py  strategy_runner.py  supervisor.py
backend/scripts/: seed_blog.py  seed_sma_rsi_strategy.py
backend/strategies/: __init__.py  base.py
backend/strategies/implementations/: __init__.py  ma_crossover.py  sma_rsi_crossover.py
backend/tests/: test_chart_endpoint_manual.py  test_indicators.py
frontend/: Dockerfile.dev  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo
frontend/src/app/: globals.css  layout.tsx  page.tsx  providers.tsx  robots.ts  sitemap.ts
frontend/src/components/: Footer.tsx  Header.tsx  (+3 more)
(+60 files in other folders)
